--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: My Blog
-SEOTitle: 我的博客 | My Blog
+title: Jerry's Blog
+SEOTitle: Jerry的茶室 | Jerry's Teahouse
 header-img: img/post-bg-desk.jpg
 email: 暂无
 description: "写一句你想写的话"
 keyword: "我的博客"
-url: "http://name.github.io"          # your host, for absolute URL
+url: "http://jerrylizejun.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/name/name.github.io.git" # you code repository
+github_repo: "https://github.com/jerrylizejun/jerrylizejun.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
